--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
             <ul class="list-disc pl-5 mb-6">
                 <li>Bible, Bible-related topics</li>
-                <li>Design Thinking</li>
-                <li>Photography</li>
-                <li>Currently AI apps</li>
+                <li>Design & Design Thinking</li>
+                <li>Exploring visual storytelling</li>
+                <li>AI x UX enthusiast</li>
                 <li>Vibe Coding</li>
             </ul>
         </section>
