--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-W8574DTC');</script>
     <!-- End Google Tag Manager -->
+     
+     <!-- Meta for link sharing-->
+    <meta property="og:title" content="Scripture Names" />
+    <meta property="og:description" content="An interactive list of over 3000 names from the Holy Bible, with their meanings and origins. Search and explore biblical names." />
+    <meta property="og:image" content="https://i.postimg.cc/HnGHGWKf/metaname.png" />  
+    <meta property="og:url" content="https://scripturenames.netlify.app/" />
+    <meta property="og:type" content="website" />
+      <!-- End Meta for link sharing -->
+
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <title>Vikash MJ</title>
     <link rel="stylesheet" href="style.css">
